# tsid-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  labels.csv
bench_results/: bench_20251125T232139Z.txt  bench_20251125T234022Z.json  bench_20251125T234022Z.txt  latest.json  parquet_encoding_latest.txt
benches/: hash_performance.rs  parquet_encoding.rs  reuse_label_hash.rs
schemas/: label_row.fbs
scripts/: plot_parquet_encoding.py  run_bench.py
src/: data_reader.rs  lib.rs  ts_id_gen.rs
src/encoding/: flatbuffer.rs  length_prefixed.rs  memcomparable.rs  mod.rs  varint.rs
