[package]
name = "tsid-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "57"
cityhash-sys = "1.0"
csv = "1.3"
fxhash = "0.2"
mur3 = "0.1"
parquet = "57"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hash_performance"
harness = false

[[bench]]
name = "reuse_label_hash"
harness = false
