[package]
name = "tsid-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "57"
bytes = "1.5"
cityhash-sys = "1.0"
csv = "1.3"
flatbuffers = "25"
fxhash = "0.2"
memcomparable = { git = "https://github.com/v0y4g3r/memcomparable", rev = "765d464816fb27dbacb37293896f90e7a1d0bc46" }
mur3 = "0.1"
parquet = "57"
serde = { version = "1.0", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "hash_performance"
harness = false

[[bench]]
name = "reuse_label_hash"
harness = false

[[bench]]
name = "parquet_encoding"
harness = false
